# libfyts

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  FAILED_LANGUAGES.md  README.md
.github/workflows/: cmake.yaml
catalogues/: default.yaml  full-broken.yaml  full.yaml  minimal.yaml
cmake/: FindPythonYq.cmake  libfyts-config.cmake.in
include/fyts/: fyts.h
scripts/: archive-grammars.py  extract-captures.py  gen-wcwidth.py  import-nvim-theme.py  import-tokyonight.py  update-grammar-packs.py  vendor-grammars.py
src/: fyts-wcwidth-wide.h  fyts-wcwidth-zero.h  fyts.c  fyts_highlight.c
stylings/: catppuccin.yaml  default.yaml  kanagawa.yaml  solarized.yaml  tokyonight.yaml  vscode-nvim.yaml  vscode.yaml
tests/: check-unmatched-captures.py  fyts_generic_style_test.c  fyts_language_test.c  fyts_stream_test.c
tests/fixtures/: no-captures.scm  sample-wide.c  sample.c  sample.cpp  sample.diff  sample.json  sample.py  sample.sh  sample.yaml  string-only-attribute-style.yaml  string-red-style.yaml
tests/fixtures/default-captures/: ada.ada  asm.s  bash.sh  c.c  cmake.cmake  cpp.cpp  csharp.cs  css.css  csv.csv  dart.dart  diff.diff  dockerfile.dockerfile  fortran.f90  go.go  haskell.hs  html.html  ini.ini  java.java  javascript.js  json.json  julia.jl  kotlin.kt  lua.lua  make.mk  markdown.md  matlab.matlab  nix.nix  perl.pl  php.php  powershell.ps1  python.py  r.r  regex.regex  ruby.rb  rust.rs  scala.scala  sql.sql  swift.swift  toml.toml  tsx.tsx  (+4 more)
tests/fixtures/tokyonight.nvim/lua/tokyonight/colors/: moon.lua  night.lua  storm.lua
